--- a/css/instagram.css
+++ b/css/instagram.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: #000;
-  font-family: Arial, sans-serif;
+  background: #F5F5F5;
+  font-family: San Francisco, sans-serif;
   overflow-y: auto;
 }
 
